# informer

./: .dockerignore  .gitignore  CREATING_WIDGETS.md  DOCKER.md  Dockerfile  LICENSE  README.md  SCREENSHOTS.md  informer.py  pyproject.toml  requirements-openmeteo.txt  requirements.txt
core/: cache.py  config.py  files.py  page.py
optionals/: __init__.py
static/: informer.js
static/widgets/: chucknorris.js  date.js  garfield.js  gitea.js  github.js  openmeteo.js  ronswanson.js  rss.js  sitestatus.js  tabs.js  xkcd.js
templates/: __init__.py  htmlcolors.py  loader.py
templates/styles/: informer.css
templates/styles/widgets/: comic.css  github.css  openmeteo.css  rss.css  sitestatus.css  tabs.css
templates/widgets/: chucknorris.html  date.html  garfield.html  gitea.html  gitea_body.html  github.html  github_body.html  openmeteo.html  page.html  quote.html  ronswanson.html  rss.html  rss_item.html  sitestatus.html  sitestatus_item.html  tabs.html  widget_base.html  widgetexception.html  xkcd.html
widgets/: __init__.py  chucknorris.py  date.py  garfield.py  gitea.py  github.py  lobsters.py  openmeteo.py  quote.py  reddit.py  ronswanson.py  rss.py  sitestatus.py  tabs.py  widget.py  xkcd.py  youtube.py
