[project]
name = "informer"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "cssminifier>=0.0.3",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "flask-apscheduler>=1.13.1",
    "flask-cors>=6.0.1",
    "jinja2>=3.1.6",
    "pendulum>=3.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
]

[dependency-groups]
openmeteo = [
    "numpy>=2.3.3",
    "openmeteo-requests>=1.7.2",
    "pandas>=2.3.2",
]

jsmin = [
    "rjsmin>=1.2.4",
]

[tool.uv]
default-groups = "all"

[tool.hatch.version]
path = "informer.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
